--- a/website/index.html
+++ b/website/index.html
@@ -1,5 +1,15 @@
-<head> </head>
+<head>
+
+	<script src="http://code.jquery.com/jquery-1.10.2.min.js"> </script>
+	<script src="main.js"> </script>
+</head>
 
 <body> 
 	<h1>Bitches enzo </h1>
+	<button id="button">Get groups</button>
+	<input id="amount" type="text" placeholder="amount"> </input>
+
+	<div id="groups">
+
+	</div>
 </body>
