Added some aditional examples to the demo

--- a/website/index.html
+++ b/website/index.html
@@ -6,10 +6,19 @@
 
 <body> 
 	<h1>Bitches enzo </h1>
-	<button id="button">Get groups</button>
-	<input id="amount" type="text" placeholder="amount"> </input>
+	<button id="buttonG">Get groups</button>
+	<input id="amountG" type="text" placeholder="amount"> </input>
+	<div id="groups"></div>
 
-	<div id="groups">
+	<button id="buttonP">Get Plussers</button>
+	<input id="amountP" type="text" placeholder="amount"> </input>
+	<div id="plussers"></div>
 
-	</div>
+	<button id="buttonF">Get group from ID</button>
+	<input id="amountF" type="text" placeholder="group id"> </input>
+	<div id="groupF"></div>
+
+	<button id="buttonH">Get plusser from ID</button>
+	<input id="amountH" type="text" placeholder="plusser id"> </input>
+	<div id="plusserH"></div>
 </body>
