--- a/website/index.html
+++ b/website/index.html
@@ -21,4 +21,8 @@
 	<button id="buttonH">Get plusser from ID</button>
 	<input id="amountH" type="text" placeholder="plusser id"> </input>
 	<div id="plusserH"></div>
+
+	<button id="buttonI">Add plusser to group</button>
+	<input id="amountIa" type="text" placeholder="group id"> </input><input id="amountIb" type="text" placeholder="plusser id"> </input>
+	<div id="groupI"></div>
 </body>
