BROKEN: pushed it so i can continu home

--- a/website/index.html
+++ b/website/index.html
@@ -16,22 +16,15 @@
 
 	<script src="main.js"> </script>
 
-	<style>
-		.demo{
-			width:250px;
+	<link rel="stylesheet" type="text/css" href="main.css" />
 
-			border-style: none solid solid solid;
-			border-width: 1px;
-			padding:5px;
-			margin:5px;
-
-
-		}
-	</style>
 </head>
 
 <body> 
+	<button id="linkB">Target</button>
+	<input id="linkV" placeholder="url"></input>
 	<h1>Bitches enzo </h1>
+
 	<div id="container">
 		<div class="demo">
 			<button id="buttonG">Get groups</button>
