Improved demo, refactored server code to be more upgrade freyndly

--- a/website/index.html
+++ b/website/index.html
@@ -1,6 +1,6 @@
 <head>
 
-	<script src="/bower_components/jquery/jquery.js"></script>
+	<script src="bower_components/jquery/jquery.js"></script>
 
 	<script src="bower_components/eventEmitter/EventEmitter.js"></script>
 	<script src="bower_components/eventie/eventie.js"></script>
@@ -26,35 +26,42 @@
 	<h1>Bitches enzo </h1>
 
 	<div id="container">
-		<div class="demo">
+		<div class="demo" style="width:200">
 			<button id="buttonG">Get groups</button>
 			<input id="amountG" type="text" placeholder="amount"> </input>
 			<div id="groups"></div>
 		</div>
 
-		<div class="demo">
+		<div class="demo" style="width:200">
 			<button id="buttonP">Get Plussers</button>
 			<input id="amountP" type="text" placeholder="amount"> </input>
 			<div id="plussers"></div>
 		</div>
 
-		<div class="demo">
+		<div class="demo" style="width:200">
 			<button id="buttonF">Get group from ID</button>
 			<input id="amountF" type="text" placeholder="group id"> </input>
 			<div id="groupF"></div>
 		</div>
 
 
-		<div class="demo">
+		<div class="demo" style="width:200">
 			<button id="buttonH">Get plusser from ID</button>
 			<input id="amountH" type="text" placeholder="plusser id"> </input>
 			<div id="plusserH"></div>
 		</div>
 
-		<div class="demo">
+		<div class="demo" style="width:200">
 			<button id="buttonI">Add plusser to group</button>
 			<input id="amountIa" type="text" placeholder="group id"> </input><input id="amountIb" type="text" placeholder="plusser id"> </input>
 			<div id="groupI"></div>
 		</div>
+
+		<div class="demo" style="width:422">
+			<button id="buttonJ">Custom get</button>
+			<input id="amountJ" type="text" placeholder="url"> </input>
+			<div id="groupJ"></div>
+		</div>
+
 	</div>
 </body>
