Improved the look of the demo

--- a/website/blocks/custom-get.html
+++ b/website/blocks/custom-get.html
@@ -1,5 +1,6 @@
 <div class="demo" style="width:422">
-  <button id="buttonJ">Custom get</button>
+  <h3>Custom</h3>
+  <button id="buttonJ">get</button>
   <input id="amountJ" type="text" placeholder="url"> </input>
   <div id="groupJ"></div>
 </div>
