--- a/website/blocks/groups.html
+++ b/website/blocks/groups.html
@@ -1,5 +1,6 @@
 <div class="demo" style="width:200">
-  <button id="buttonG">Get groups</button>
+  <h3>groups</h3>
+  <button id="buttonG">Get</button>
   <input id="amountG" type="text" placeholder="amount"> </input>
   <div id="groups"></div>
 </div>
