--- a/website/blocks/plussers.html
+++ b/website/blocks/plussers.html
@@ -1,5 +1,6 @@
 <div class="demo" style="width:200">
-  <button id="buttonP">Get Plussers</button>
+  <h3>Plussers</h3>
+  <button id="buttonP">Get</button>
   <input id="amountP" type="text" placeholder="amount"> </input>
   <div id="plussers"></div>
 </div>
