--- a/website/blocks/single-plusser.html
+++ b/website/blocks/single-plusser.html
@@ -1,5 +1,6 @@
 <div class="demo" style="width:200">
-  <button id="buttonH">Get plusser from ID</button>
+  <h3>Plusser from ID</h3>
+  <button id="buttonH">Get</button>
   <input id="amountH" type="text" placeholder="plusser id"> </input>
   <div id="plusserH"></div>
 </div>
