--- a/website/blocks/add-plusser-to-group.html
+++ b/website/blocks/add-plusser-to-group.html
@@ -1,5 +1,6 @@
 <div class="demo" style="width:200">
-  <button id="buttonI">Add plusser to group</button>
+  <h3>plusser to group</h3>
+  <button id="buttonI">Add</button>
   <input id="amountIa" type="text" placeholder="group id"> </input><input id="amountIb" type="text" placeholder="plusser id"> </input>
   <div id="groupI"></div>
 </div>
