--- a/website/blocks/single-group.html
+++ b/website/blocks/single-group.html
@@ -1,5 +1,6 @@
 <div class="demo" style="width:200">
-  <button id="buttonF">Get group from ID</button>
+  <h3>Group from ID</h3>
+  <button id="buttonF">Get</button>
   <input id="amountF" type="text" placeholder="group id"> </input>
   <div id="groupF"></div>
 </div>
