--- a/website/header/header.html
+++ b/website/header/header.html
@@ -1,7 +1,9 @@
 <header>
   <div id="headWrap">
     <h1>OOMPAA</h1>
-    <?php include("header/server-switcher.html") ?>
+      <script>
+        include("header/server-switcher", "#headWrap");
+      </script>
   </div>
 </header>
 
