--- a/website/header/header.html
+++ b/website/header/header.html
@@ -1,48 +1,51 @@
-<header>
-  <div id="headWrap">
-    <h1>OOMPAA</h1>
-      <script>
-        include("header/server-switcher", "#headWrap");
-      </script>
-  </div>
-</header>
+<div class="header">
 
-<div id="headHolder"></div>
+  <header>
+    <div id="headWrap">
+      <h1>OOMPAA</h1>
+        <script>
+          include("header/server-switcher", "#headWrap");
+        </script>
+    </div>
+  </header>
+
+  <div id="headHolder"></div>
 
 
-<style rel="stylesheet">
-  
-  header{
-    position: fixed;
-    min-width:100%;
-    background-color: lightgrey;
-    height:50px;
-    z-index: 9001;
-  }
+  <style>
+    
+    header{
+      position: fixed;
+      min-width:100%;
+      background-color: lightgrey;
+      height:50px;
+      z-index: 9001;
+    }
 
-  #headHolder{
-    min-width:100%;
-    background-color: lightgrey;
-    height:60px;
+    #headHolder{
+      min-width:100%;
+      background-color: lightgrey;
+      height:60px;
 
-  }
+    }
 
-  #headWrap{
-    position: relative;
-    top:10px;
-    margin:auto;
-    margin-top:0px;
-    padding:0px;
-    width:calc(90% + 40px);
-    height:100%;
-    background-color: #60D4AE;
-    z-index: 9001;
-  }
-  #headWrap h1 {
-    width:180px;
-    margin:auto;
-    padding-top:10px;
-    color: #000;
-  }
+    #headWrap{
+      position: relative;
+      top:10px;
+      margin:auto;
+      margin-top:0px;
+      padding:0px;
+      width:calc(90% + 40px);
+      height:100%;
+      background-color: #60D4AE;
+      z-index: 9001;
+    }
+    #headWrap h1 {
+      width:180px;
+      margin:auto;
+      padding-top:10px;
+      color: #000;
+    }
 
-</style>
+  </style>
+</div>
