--- a/website/blocks/add-plusser-to-group.html
+++ b/website/blocks/add-plusser-to-group.html
@@ -1,24 +1,25 @@
-<div class="demo" style="width:200">
+<div class="demo add-plusser-to-group" style="width:200">
   <h3>plusser to group</h3>
   <button id="buttonI">Add</button>
   <input id="amountIa" type="text" placeholder="group id"> </input><input id="amountIb" type="text" placeholder="plusser id"> </input>
   <div id="groupI"></div>
-</div>
 
-<script>
-  $('#buttonI').click(function(){
-    addPlusserToGRoup($('#amountIa').val(),$('#amountIb').val())
-  });
-
- function addPlusserToGRoup(groupId,plusId){
-    console.log(plusId);
-    var html = $("#groupI");
-    $.post("http://"+link+"/groups/"+groupId,{"plussers":plusId}).done(function(data){
-      html.html(JSON.stringify(data));
-            $("#container").masonry();
-    }).error(function(data){
-      html.html(JSON.stringify(data));
-            $("#container").masonry();
+  <script>
+    $('#buttonI').click(function(){
+      addPlusserToGRoup($('#amountIa').val(),$('#amountIb').val())
     });
-  } 
-</script>
+
+   function addPlusserToGRoup(groupId,plusId){
+      console.log(plusId);
+      var html = $("#groupI");
+      $.post("http://"+link+"/groups/"+groupId,{"plussers":plusId}).done(function(data){
+        html.html(JSON.stringify(data));
+              $(".container").masonry();
+      }).error(function(data){
+        html.html(JSON.stringify(data));
+              $(".container").masonry();
+      });
+    } 
+  </script>
+
+</div>
