--- a/website/blocks/plussers.html
+++ b/website/blocks/plussers.html
@@ -1,4 +1,4 @@
-<div class="demo" style="width:200">
+<div class="demo plussers" style="width:200">
   <h3>Plussers</h3>
   <div class="buttons">
     <button id="buttonP">Get</button>
@@ -6,59 +6,59 @@
   </div>
 
   <div id="plussers"></div>
-</div>
 
-<script>
+  <script>
 
-  getPlussers(5);
+    getPlussers(5);
 
-  $('#buttonP').click(function(item){
-    getPlussers($('#amountP').val(),$(item));
-  });
-
-
-  function getPlussers(amount){
-    var html = $("#plussers");
-    var html2 = "";
-
-    html.fadeOut(function(){
-      $.get( "http://"+link+"/plussers").done(function(data){
-          console.log(data);
-        var i = 0;
-        $.each(data,function(key,plusser){
-
-          if(i >= amount){
-            return
-          }
-
-          html2 += ("<div class='plusser'> <img src='"+plusser.image+"'>"+"<p> name: "+plusser.firstName+" </p></div>");
-          i++;
-        });
-        html.html(html2);
-        html.fadeIn();
-        $("#container").masonry();
-      });
+    $('#buttonP').click(function(item){
+      getPlussers($('#amountP').val(),$(item));
     });
-  }
-</script>
 
-<style>
 
-  #plussers .plusser img{
-      width:40px;
-      float: left;
-  } 
-  #plussers .plusser{;
-    padding-top: 10px;
-    width:100%;
-    height:50px;
-    border-top-style: solid;
-    border-width: 1px;
-    border-color: #60D4AE;
-  }
-  #plussers p{
-    float:left;
-    padding-left:10px;
-    margin:0px;
-  }  
-</style>
+    function getPlussers(amount){
+      var html = $("#plussers");
+      var html2 = "";
+
+      html.fadeOut(function(){
+        $.get( "http://"+link+"/plussers").done(function(data){
+            console.log(data);
+          var i = 0;
+          $.each(data,function(key,plusser){
+
+            if(i >= amount){
+              return
+            }
+
+            html2 += ("<div class='plusser'> <img src='"+plusser.image+"'>"+"<p> name: "+plusser.firstName+" </p></div>");
+            i++;
+          });
+          html.html(html2);
+          html.fadeIn();
+          $(".container").masonry();
+        });
+      });
+    }
+  </script>
+
+  <style>
+
+    #plussers .plusser img{
+        width:40px;
+        float: left;
+    } 
+    #plussers .plusser{;
+      padding-top: 10px;
+      width:100%;
+      height:50px;
+      border-top-style: solid;
+      border-width: 1px;
+      border-color: #60D4AE;
+    }
+    #plussers p{
+      float:left;
+      padding-left:10px;
+      margin:0px;
+    }  
+  </style>
+</div>
