Interest can now be koppled to groups

--- a/website/pages/all.html
+++ b/website/pages/all.html
@@ -5,6 +5,7 @@
     include("blocks/single-group",".container");
     include("blocks/single-plusser",".container");
     include("blocks/add-plusser-to-group",".container");
+    include("blocks/add-interest-to-plusser",".container");
     include("blocks/custom-get",".container");
 
     var container = $(".container")
