--- a/website/pages/posts.html
+++ b/website/pages/posts.html
@@ -1,6 +1,7 @@
 <div class="container page">
     <script>
       include("blocks/add-plusser-to-group",".container");
+      include("blocks/add-interest-to-plusser",".container");
     </script>
     
   <script>
