Added a little bit of content to Plussers

--- a/website/pages/plussers.html
+++ b/website/pages/plussers.html
@@ -1,4 +1,6 @@
 <div id="plussers" class="container page">
-  <h1> plussers </h1>
-  <div id="recomendations"> </div>
+  <h1> Plussers </h1>
+  <script>
+    include("blocks/plussers-search","#plussers");
+  </script>
 </div>
