Added a random plussers block

--- a/website/pages/plussers.html
+++ b/website/pages/plussers.html
@@ -1,6 +1,12 @@
 <div id="plussers" class="container page">
   <h1> Plussers </h1>
   <script>
-    include("blocks/plussers-search","#plussers");
+    include("blocks/plussers-random","#plussers");
   </script>
+
+  <style>
+    .container{
+      width:90%;
+    }
+  </style>
 </div>
