Added simple search block to the plussers page

--- a/website/blocks/plussers-random.html
+++ b/website/blocks/plussers-random.html
@@ -1,4 +1,4 @@
-<div class="plussers-random">
+<div class="plussers-random block">
   <div id="randoms"> </div>
     <div class="r-plussers">
     </div>
@@ -33,6 +33,7 @@
   
   <style>
     .plussers-random{
+      float:left;
       width:25%;
       overflow: auto;
     }
