--- a/website/pages/plussers.html
+++ b/website/pages/plussers.html
@@ -2,11 +2,16 @@
   <h1> Plussers </h1>
   <script>
     include("blocks/plussers-random","#plussers");
+    include("blocks/plussers-search","#plussers");
   </script>
 
   <style>
     .container{
       width:90%;
+    }
+    #plussers h1{
+      width:100px;
+      margin:auto;
     }
   </style>
 </div>
