bezig groups pages en blocks
opzet nog niet definitive versie WIP

--- a/website/pages/groups.html
+++ b/website/pages/groups.html
@@ -1,3 +1,7 @@
 <div id="groups" class="container page">
+    <script>
+    include("blocks/groups-content","#groups")
+  </script>
+  
   <h1> Groepen </h1>
 </div>
