--- a/website/blocks/home-login.html
+++ b/website/blocks/home-login.html
@@ -1,8 +1,8 @@
 <div id="home-login" class="block">
   <h3> Login  </h3>
-  <labeL> Voornaam</label> <input class="firstName" placeholder="voornaam"> </input>
-  <labeL> Achternaam</label> <input class="lastname" placeholder="achternaam"> </input> </br>
-  <labeL> Wachtwoord</label> <input class="password" type="password" placeholder="wachtwoord"> </input> </br>
+  <labeL> Voornaam</label> <input class="login-firstName" placeholder="voornaam"> </input>
+  <labeL> Achternaam</label> <input class="login-lastname" placeholder="achternaam"> </input> </br>
+  <labeL> Wachtwoord</label> <input class="login-password" type="password" placeholder="wachtwoord"> </input> </br>
   <button id ="btn-login"> Login </button>
   <p class="feedback"> </p>
 
@@ -14,9 +14,9 @@
     $("#btn-login").on("click",function(data){
       var data = new Object();
 
-      data.firstName = $(".firstName").val();
-      data.lastName = $(".lastname").val();
-      data.password = $(".password").val();
+      data.firstName = $(".login-firstName").val();
+      data.lastName = $(".login-lastname").val();
+      data.password = $(".login-password").val();
 
       $.post(SERVER+"/logIn",data,function(data){
         logIn(data,true);
