html include tag now works but init isn't called automatic yet

--- a/website/index.html
+++ b/website/index.html
@@ -26,5 +26,12 @@
 </head>
 
 <body> 
+	<include src="header/header"> </include>
 
+	<div id='content'>
+		<include src="blocks/menu"> </include>
+		<include src="pages/home"> </include>
+	</div>
+	
+	<!-- <include src="footer/footer"> </include> -->	
 </body>
