--- a/website/pages/home.html
+++ b/website/pages/home.html
@@ -66,8 +66,7 @@
       background-size: 100% 100%;
     } */
   </style>
-
   <script>
-    init("#home");
+    init('#home');
   </script>
 </div>
